@@ -17,15 +17,19 @@
             <td><label for="sql_port">Port Number:</label></td>
             <td><input type="text" name="sql_port" id="sql_port" value="{$cfg->DB_PORT}" /></td>
         </tr>
-		<tr class="">
+        <tr class="">
+            <td><label for="sql_socket">Socket Path:</label></td>
+            <td><input type="text" name="sql_socket" id="sql_socket" value="{$cfg->DB_SOCKET}" /></td>
+        </tr>
+		<tr class="alt">
 			<td><label for="user">Username:</label></td>
 			<td><input type="text" name="user" id="user" value="{$cfg->DB_USER}" /></td>
 		</tr>
-		<tr class="alt">
+		<tr class="">
 			<td><label for="pass">Password:</label></td>
 			<td><input type="text" name="pass" id="pass" value="{$cfg->DB_PASSWORD}" /></td>
 		</tr>
-		<tr class="">
+		<tr class="alt">
 			<td><label for="db">Database:</label></td>
 			<td><input type="text" name="db" id="db" value="{$cfg->DB_NAME}" /></td>
 		</tr>
