@@ -1,5 +1,8 @@
-06292013 -> ugo -> added language flags to movie page
-						udateded test_misc_sorter.php
+06302013 -> jonnyboy -> added dateadded column to nzbs table, added code to delete incomplete nzbs older than 4 hours
+						added nzbs to monitor, total(distinct), pending
+						started adding code to install scripts for socket and alternate nntp
+06292013 -> ugo		 -> added language flags to movie page
+						updateded test_misc_sorter.php
 06292013 -> jonnyboy ->	added script to create a ramdisk and move mysql tables to it
 						modified file to delete releases based on poster, searchname, name or guid, using = or like
 						added simple script to run all threaded scripts sequentially
